# mypt

./: CMakeLists.txt  README.md  image.ppm  image_10240.ppm  image_diff_4096.ppm  image_diff_ref.ppm  image_guojie_reflection.ppm  image_no_reflection.ppm  image_orthographic.ppm  image_perspective.ppm  image_ref.ppm  image_refractive.ppm  image_smallpt_reflection.ppm  image_weekend.ppm  logmy  mypt  mypt.cpp  run.sh  smallpt  smallpt.cpp
models/: CornellBox-Water.mtl
output/: image1.ppm  image_ref.ppm  output_test_path_tracing.ppm  output_test_photon_mapping.ppm  output_test_photon_mapping2.ppm  output_test_photon_mapping_all_from_camera.ppm  output_test_photon_mapping_ref_32.ppm  output_test_photon_mapping_simplified_cos.ppm
scripts/: run.sh  sphere_sampling.py
src/: image.ppm  image_ref.ppm  main  main.cpp  mypt.cpp  ref  ref.cpp
src/include/: IntersectInfo.h  camera.h  core.h  image.h  integrator.h  light.h  material.h  primitive.h  ray.h  sampler.h  scene.h  triangle.h
src/include/Intergrator/: integrator.h  pathtracing.h  pathtracing_nee.h
src/include/Intergrator/photo_mapping/: photo_mapping_core.h  photon_mapping_integrator.h
tests/: CMakeLists.txt  test_camera.cpp  test_intersector.cpp  test_path_tracing.cpp  test_photon_mapping.cpp  visualize_photon_map.cpp
